[package]
name = "nano_image_server"
version = "0.3.2-alpha"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["fs"]}
serde = { version = "1.0.216", features = ["derive"] }
image = "0.25.5"
rustls = "0.23.20"
clap = { version = "4.5.24", features = ["derive"] }
rust-embed = "8.5.0"
mime_guess = "2.0.5"

