[package]
name = "nano_image_server"
version = "0.6.0-beta"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["fs"] }
serde = { version = "1.0.216", features = ["derive"] }
image = { version = "0.25.5" }
rustls = { version = "0.23.27" }
clap = { version = "4.5.24", features = ["derive"] }
rust-embed = "8.5.0"
mime_guess = "2.0.5"
serde_json = "1.0.137"
dashmap = "6.1.0"
chrono = "0.4.39"
once_cell = "1.20.2"
axum-server = { version = "0.7.2", features = ["tls-rustls-no-provider"] }

[features]
default = ["all"]
all = ["processing"]

processing = []
