[package]
name = "nano_image_server"
version = "0.7.0-beta"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread","fs"] }
axum = "0.8.1"
serde = { version = "1.0.216", features = ["derive"] }
image = { version = "0.25.5", optional = true }
rustls = { version = "0.23.27" , optional = true }
axum-server = { version = "0.7.2", features = ["tls-rustls-no-provider"], optional = true}
thiserror = "2.0.17"

[features]
default = []
all = [ "cache", "processing", "tls" ]

processing = ["image"]
cache = []
tls = ["rustls","axum-server"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
